force-app/main/default/objects/Remittance_Info__c/Remittance_Info__c.object-meta.xml
<CustomObject>
    <label>Remittance Info</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Remittance Info Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Remittance Info</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>