force-app/main/default/objects/Remittance_Info__c/fields/Company_Logo_Image__c.field-meta.xml
<CustomField>
    <fullName>Company_Logo_Image__c</fullName>
    <formula>IMAGE(Company_Logo__c,&quot;Company Logo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Logo Image</label>
    <type>Text</type>
</CustomField>