force-app/main/default/objects/Remittance_Info__c/fields/Email_Greeting__c.field-meta.xml
<CustomField>
    <fullName>Email_Greeting__c</fullName>
    <description>NICC-026472

The text in this field displays on the e-mail template used for e-mailing Sales Invoices</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the greeting that should appear before the contact&apos;s name in the outgoing email message.</inlineHelpText>
    <label>Email Greeting</label>
    <length>255</length>
    <type>Text</type>
</CustomField>