force-app/main/default/objects/Remittance_Info__c/fields/Email_Signature__c.field-meta.xml
<CustomField>
    <fullName>Email_Signature__c</fullName>
    <description>NICC-026472

Email Signature of the e-mail for the Sales Invoice related to this Remittance Info record</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Enter the text that should appear in the closing line/signature of the outgoing email message - line breaks are not supported.</inlineHelpText>
    <label>Email Signature</label>
    <type>TextArea</type>
</CustomField>