force-app/main/default/objects/Remittance_Info__c/fields/FFA_Currency__c.field-meta.xml
<CustomField>
    <fullName>FFA_Currency__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FFA Currency</label>
    <referenceTo>c2g__codaAccountingCurrency__c</referenceTo>
    <relationshipLabel>Remittance Info</relationshipLabel>
    <relationshipName>Remittance_Info</relationshipName>
    <type>Lookup</type>
</CustomField>