force-app/main/default/objects/Remittance_Info__c/fields/Invoice_Footer_Image__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Footer_Image__c</fullName>
    <formula>IMAGE(Invoice_Footer__c,&quot;Invoice Footer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Footer Image</label>
    <type>Text</type>
</CustomField>