force-app/main/default/objects/Remittance_Info__c/fields/Invoice_Header__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Header__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Header</label>
    <length>255</length>
    <type>Text</type>
</CustomField>