force-app/main/default/objects/Remittance_Info__c/fields/Invoice_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Header_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Header Text</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>