force-app/main/default/objects/Remittance_Info__c/fields/Statement_Footer__c.field-meta.xml
<CustomField>
    <fullName>Statement_Footer__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Statement Footer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>