force-app/main/default/objects/Remittance_Info__c/fields/Statement_Footer_Image__c.field-meta.xml
<CustomField>
    <fullName>Statement_Footer_Image__c</fullName>
    <formula>IMAGE(Statement_Footer__c,&quot;Statement Footer&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Statement Footer Image</label>
    <type>Text</type>
</CustomField>